tests/cases/errors/compile_return_top_level.lox
// `return` is only valid inside a function body.
// expect compile error: Can't return from top-level code
return 1;
